<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/datePickerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecionar_data"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/datePickerDayLbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dia"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/datePickerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/datePickerMonthLbl"
        />

    <TextView
        android:id="@+id/datePickerMonthLbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mes"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/datePickerTitle"
        app:layout_constraintStart_toEndOf="@+id/datePickerDayLbl"
        app:layout_constraintEnd_toStartOf="@+id/datePickerYearLbl"
        />

    <TextView
        android:id="@+id/datePickerYearLbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ano"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/datePickerTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/datePickerMonthLbl"
        />


    <FrameLayout
        android:id="@+id/datePickerDay"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/datePickerMonthLbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/datePickerMonth"/>
    
    <FrameLayout
        android:id="@+id/datePickerMonth"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/datePickerMonthLbl"
        app:layout_constraintStart_toEndOf="@+id/datePickerDay"
        app:layout_constraintEnd_toStartOf="@+id/datePickerYear"/>

    <FrameLayout
        android:id="@+id/datePickerYear"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/datePickerYearLbl"
        app:layout_constraintStart_toEndOf="@+id/datePickerMonth"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnDatePickerAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aceitar"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/datePickerMonth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDatePickerCancel"/>

    <Button
        android:id="@+id/btnDatePickerCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/datePickerMonth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDatePickerAdd"/>


</androidx.constraintlayout.widget.ConstraintLayout>