<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/monthDatePickerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecionar_mes_e_ano"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/monthDatePickerMonthLbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mes"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/monthDatePickerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/monthDatePickerYearLabel"
        />

    <TextView
        android:id="@+id/monthDatePickerYearLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ano"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/monthDatePickerTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/monthDatePickerMonthLbl"
        />


    <FrameLayout
        android:id="@+id/monthDatePickerMonth"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/monthDatePickerMonthLbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/monthDatePickerYear"/>

    <FrameLayout
        android:id="@+id/monthDatePickerYear"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/monthDatePickerYearLabel"
        app:layout_constraintStart_toEndOf="@+id/monthDatePickerMonth"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnMonthDatePickerAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aceitar"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/monthDatePickerMonth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMonthDatePickerCancel"/>

    <Button
        android:id="@+id/btnMonthDatePickerCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/monthDatePickerMonth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMonthDatePickerAdd"/>


</androidx.constraintlayout.widget.ConstraintLayout>