<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StudentFragment">

    <TextView
        android:id="@+id/lbl_student_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/alunos"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newStudentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/lbl_student_title"
        tools:visibility="visible">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#50bbbbbb"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNewStudentNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/nome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etNewStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#666666"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:textColor="@color/default_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNewStudentNameLabel"
            tools:ignore="Autofill,LabelFor"
            tools:text="Francisco Jorge Alvim Martins" />


        <TextView
            android:id="@+id/tvNewStudentContactLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/contacto"
            app:layout_constraintEnd_toStartOf="@+id/tvNewStudentLevelLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNewStudentName" />

        <EditText
            android:id="@+id/etNewStudentContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="#666666"
            android:inputType="number"
            android:maxLength="15"
            android:maxLines="1"
            android:textColor="@color/default_black"
            app:layout_constraintEnd_toEndOf="@+id/tvNewStudentContactLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNewStudentContactLabel"
            tools:ignore="Autofill,LabelFor"
            tools:text="00351912821122" />

        <TextView
            android:id="@+id/tvNewStudentLevelLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/graducao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvNewStudentContactLabel"
            app:layout_constraintTop_toBottomOf="@+id/etNewStudentName" />

        <EditText
            android:id="@+id/etNewStudentLevelNum"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#666666"
            android:gravity="end"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1"
            android:textColor="@color/default_black"
            app:layout_constraintStart_toStartOf="@+id/tvNewStudentLevelLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvNewStudentContactLabel"
            tools:ignore="Autofill,LabelFor"
            tools:text="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivel"
            android:textColor="@color/normal_black"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/etNewStudentLevelNum"
            app:layout_constraintStart_toEndOf="@+id/etNewStudentLevelNum" />

        <EditText
            android:id="@+id/etNewStudentLevelType"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="#666666"
            android:gravity="start"
            android:inputType="text"
            android:maxLength="3"
            android:maxLines="1"
            android:textColor="@color/default_black"
            app:layout_constraintStart_toEndOf="@+id/etNewStudentLevelNum"
            app:layout_constraintTop_toBottomOf="@+id/tvNewStudentContactLabel"
            tools:ignore="Autofill,LabelFor"
            tools:text="Dan" />

        <Button
            android:id="@+id/btnStudentLevel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/etNewStudentLevelNum"
            app:layout_constraintEnd_toEndOf="@+id/etNewStudentLevelType"
            app:layout_constraintStart_toStartOf="@+id/etNewStudentLevelNum"
            app:layout_constraintTop_toTopOf="@+id/etNewStudentLevelNum" />

        <ImageButton
            android:id="@+id/btnStudentCheckNotes"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/ic_note_add_black"
            app:layout_constraintBottom_toBottomOf="@+id/btnStudentLevel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnStudentLevel"
            app:layout_constraintTop_toTopOf="@+id/btnStudentLevel" />

        <TextView
            android:id="@+id/tvNewStudentDefaultPaymentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/mensalidade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNewStudentContact" />

        <EditText
            android:id="@+id/etNewStudentDefaultPayment"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="#666666"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:textColor="@color/default_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNewStudentDefaultPaymentLabel"
            tools:ignore="Autofill,LabelFor"
            tools:text="20.50" />

        <TextView
            android:id="@+id/tvNewStudentPaymentAmountType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:gravity="center"
            android:text="@string/euro"
            android:textColor="@color/default_black"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/etNewStudentDefaultPayment"
            app:layout_constraintStart_toEndOf="@+id/etNewStudentDefaultPayment" />


        <TextView
            android:id="@+id/tvNewStudentTrainsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/treina"
            app:layout_constraintEnd_toStartOf="@+id/tvNewStudentLevelLabel"
            app:layout_constraintStart_toEndOf="@+id/tvNewStudentDefaultPaymentLabel"
            app:layout_constraintTop_toTopOf="@+id/tvNewStudentDefaultPaymentLabel" />

        <ImageButton
            android:id="@+id/btnStudentsTrains"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/selectable_ic_selected"
            app:layout_constraintEnd_toEndOf="@+id/tvNewStudentTrainsLabel"
            app:layout_constraintStart_toStartOf="@+id/tvNewStudentTrainsLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvNewStudentTrainsLabel" />


        <Button
            android:id="@+id/btnStudentAdd"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:text="@string/adicionar"
            app:layout_constraintBottom_toBottomOf="@+id/etNewStudentDefaultPayment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvNewStudentLevelLabel"
            app:layout_constraintTop_toTopOf="@+id/etNewStudentDefaultPayment" />

        <Button
            android:id="@+id/btnStudentChange"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:text="@string/mudar"
            app:layout_constraintBottom_toBottomOf="@+id/etNewStudentDefaultPayment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvNewStudentLevelLabel"
            app:layout_constraintTop_toTopOf="@+id/etNewStudentDefaultPayment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_students_left_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#bbbbbb"
        app:layout_constraintBottom_toBottomOf="@+id/btnNewStudentShow"
        app:layout_constraintEnd_toStartOf="@+id/btnNewStudentShow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnNewStudentShow" />

    <View
        android:id="@+id/view_students_right_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#bbbbbb"
        app:layout_constraintBottom_toBottomOf="@+id/view_students_left_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNewStudentShow"
        app:layout_constraintTop_toTopOf="@+id/view_students_left_line" />

    <ImageView
        android:id="@+id/btnNewStudentShow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        android:rotation="0"
        android:src="@drawable/ic_add_circle_outline_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view_students_left_line"
        app:layout_constraintTop_toBottomOf="@+id/newStudentLayout" />


    <ListView
        android:id="@+id/studentList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="50dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNewStudentShow"
        tools:listitem="@layout/card_student" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#50bbbbbb"
        app:layout_constraintTop_toTopOf="@+id/studentList" />


</androidx.constraintlayout.widget.ConstraintLayout>